Split service worker and rework npm comands

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -50,6 +50,7 @@
         display: none;
       }
     </style>
+    <script type='module' src='./app.js' async></script>
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet'>
   <body>
 
@@ -62,6 +63,4 @@
 
     <game-shell id='game'></game-shell>
   </body>
-
-  <script type='module' src='./app.js'></script>
 </html>
